resq/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: laravel
          image: zaganjade/laravel-hackathon
          ports:
            - containerPort: 80
