resq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
spec:
  type: NodePort
  selector:
    app: laravel
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
